--- a/sass/Guide_Pratique.scss
+++ b/sass/Guide_Pratique.scss
@@ -1,10 +1,10 @@
-#wb_header { background: transparent none repeat scroll left center; height: 250px; }
-#wb_header { height: 250px; }
-#wb_main { background: transparent none repeat scroll left top; height: 2130px; padding: 0 0 70px 0; }
-#wb_main { height: 4042px; }
+$bodyColor : #fcf3d2;
+$arrierePlan : transparent none repeat scroll left center;
+
+#wb_header { background: $arrierePlan; height: 250px; }
+#wb_main { background: transparent none repeat scroll left top; height: 4042px; padding: 0 0 70px 0; }
 #wb_footer { background: transparent none repeat scroll left top; height: 80px; }
-#wb_footer { height: 80px; }
-body { background: #fcf3d2 url("../gallery_gen/929d69d99e87503631c3e559e93d61e0.jpg") no-repeat scroll center top; }
+body { background: $bodyColor url("../gallery_gen/929d69d99e87503631c3e559e93d61e0.jpg") no-repeat scroll center top; }
 .wb_sbg { background: transparent url("../gallery_gen/dad763187c3171ad64b3e88d1d511a44.jpg") repeat-x scroll center bottom; }
 body, .wb_sbg { min-width: 320px; min-height: 4442px; }
 .root { width: 320px; height: 4442px; overflow: hidden; }
@@ -23,7 +23,7 @@ body, .wb_sbg { min-width: 320px; min-height: 4442px; }
 #menu li a { text-transform: uppercase; border: 0px none #000000; padding: 5px 10px 5px 10px; font: normal normal 13px Georgia,serif; text-decoration: none; color: #8b4828; line-height: 15px; background: transparent none repeat scroll left top; }
 #menu li:hover > a, #menu li:focus > a { border: 0px none #000000; font: normal normal 13px Georgia,serif; text-decoration: none; color: #00c2a2; line-height: 15px; background: transparent none no-repeat scroll center top; }
 #menu li.active > a { border: 0px none #000000; font: normal normal 13px Georgia,serif; text-decoration: none; color: #00c292; line-height: 15px; background: transparent none no-repeat scroll center top; }
-border-radius: 0px 0px 0px 0px; -webkit-border-radius: 0px 0px 0px 0px; }
+#div_logo_idf { border-radius: 0px 0px 0px 0px; -webkit-border-radius: 0px 0px 0px 0px; }
 #div_logo_idf { left: 20px; top: 10px; min-width: 290px; width: 290px; min-height: 71px; height: 71px; display: block; z-index: 212; }
 #div_facebook { left: 280px; top: 30px; min-width: 30px; width: 30px; min-height: 30px; height: 30px; display: block; z-index: 206; }
 #div_facebook img { width: 30px; height: 30px; position: static; left: 0px; top: 0px; }
@@ -145,31 +145,21 @@ border-radius: 0px 0px 0px 0px; -webkit-border-radius: 0px 0px 0px 0px; }
   #menu .btn-collapser { display: none; }
   #menu > ul { display: block; }
   #div_logo_idf { left: 27px; top: 17px; min-width: 300px; width: 300px; min-height: 75px; height: 75px; display: block; }
-  #div_facebook { left: 900px; top: 27px; min-width: 32px; width: 32px; min-height: 32px; height: 32px; display: block; }
-  #div_facebook img { width: 32px; height: 32px; position: static; left: 0px; top: 0px; }
-  #div_twitter { left: 850px; top: 27px; min-width: 32px; width: 32px; min-height: 32px; height: 32px; display: block; }
-  #div_twitter img { width: 32px; height: 32px; position: static; left: 0px; top: 0px; }
+  #div_facebook { left: 900px; top: 27px; min-width: 32px; width: 32px; min-height: 32px; height: 32px; display: block; img { width: 32px; height: 32px; position: static; left: 0px; top: 0px; }}
+  #div_twitter { left: 850px; top: 27px; min-width: 32px; width: 32px; min-height: 32px; height: 32px; display: block; img { width: 32px; height: 32px; position: static; left: 0px; top: 0px; }}
   #div_footer_nosNoms { left: 50px; top: 10px; min-width: 530px; width: 530px; min-height: 28px; height: 28px; display: block; }
-  #wb_element_instance71 { left: 950px; top: 27px; min-width: 32px; width: 32px; min-height: 32px; height: 32px; display: block; }
-  #wb_element_instance71 img { width: 32px; height: 32px; position: static; left: 0px; top: 0px; }
-  #div_img_metro { left: 30px; top: 260px; min-width: 390px; width: 390px; min-height: 270px; height: 270px; display: block; }
-  #div_img_metro img { width: 390px; height: 270px; position: static; left: 0px; top: 0px; }
+  #wb_element_instance71 { left: 950px; top: 27px; min-width: 32px; width: 32px; min-height: 32px; height: 32px; display: block; img { width: 32px; height: 32px; position: static; left: 0px; top: 0px; }}
+  #div_img_metro { left: 30px; top: 260px; min-width: 390px; width: 390px; min-height: 270px; height: 270px; display: block; img { width: 390px; height: 270px; position: static; left: 0px; top: 0px; }}
   #div_titre_guidePratique { left: 0px; top: 10px; min-width: 370px; width: 370px; min-height: 67px; height: 67px; display: block; }
   #div_liensUtiles { left: 20px; top: 1860px; min-width: 190px; width: 190px; min-height: 169px; height: 169px; display: block; }
   #div_carteGoogle { left: 220px; top: 1860px; min-width: 760px; width: 760px; min-height: 270px; height: 270px; display: block; }
   #paragraphe_metro { left: 440px; top: 130px; min-width: 530px; width: 530px; min-height: 451px; height: 451px; display: block; }
-  #img_BusParis { left: 60px; top: 960px; min-width: 240px; width: 240px; min-height: 160px; height: 160px; display: block; overflow: hidden; }
-  #img_BusParis img { width: 240px; height: 170px; position: relative; left: 0px; top: 0px; max-width: inherit; }
+  #img_BusParis { left: 60px; top: 960px; min-width: 240px; width: 240px; min-height: 160px; height: 160px; display: block; overflow: hidden; img { width: 240px; height: 170px; position: relative; left: 0px; top: 0px; max-width: inherit; }}
   #paragraphe_Bus { left: 360px; top: 970px; min-width: 570px; width: 570px; min-height: 850px; height: 850px; display: block; }
-  #div_imgTaxis { left: 500px; top: 640px; min-width: 430px; width: 430px; min-height: 270px; height: 270px; display: block; }
-  #div_imgTaxis img { width: 430px; height: 270px; position: static; left: 0px; top: 0px; }
+  #div_imgTaxis { left: 500px; top: 640px; min-width: 430px; width: 430px; min-height: 270px; height: 270px; display: block; img { width: 430px; height: 270px; position: static; left: 0px; top: 0px; }}
   #div_ParagrapheTaxi { left: 50px; top: 670px; min-width: 380px; width: 380px; min-height: 216px; height: 216px; display: block; }
-  #div_img_VoitureJaune { left: 60px; top: 1130px; min-width: 240px; width: 240px; min-height: 190px; height: 190px; display: block; overflow: hidden; }
-  #div_img_VoitureJaune img { width: 240px; height: 260px; position: relative; left: 0px; top: -10px; max-width: inherit; }
-  #bus_Stif { left: 61px; top: 1331px; min-width: 240px; width: 240px; min-height: 160px; height: 160px; display: block; }
-  #bus_Stif img { width: 240px; height: 160px; position: static; left: 0px; top: 0px; }
-  #bus_Touriste { left: 60px; top: 1500px; min-width: 240px; width: 240px; min-height: 160px; height: 160px; display: block; overflow: hidden; }
-  #bus_Touriste img { width: 260px; height: 200px; position: relative; left: -20px; top: -40px; max-width: inherit; }
-  #bus_montpartre { left: 60px; top: 1670px; min-width: 240px; width: 240px; min-height: 160px; height: 160px; display: block; overflow: hidden; }
-  #bus_montpartre img { width: 240px; height: 190px; position: relative; left: 0px; top: -20px; max-width: inherit; }
+  #div_img_VoitureJaune { left: 60px; top: 1130px; min-width: 240px; width: 240px; min-height: 190px; height: 190px; display: block; overflow: hidden; img { width: 240px; height: 260px; position: relative; left: 0px; top: -10px; max-width: inherit; }}
+  #bus_Stif { left: 61px; top: 1331px; min-width: 240px; width: 240px; min-height: 160px; height: 160px; display: block; img { width: 240px; height: 160px; position: static; left: 0px; top: 0px; }}
+  #bus_Touriste { left: 60px; top: 1500px; min-width: 240px; width: 240px; min-height: 160px; height: 160px; display: block; overflow: hidden; img { width: 260px; height: 200px; position: relative; left: -20px; top: -40px; max-width: inherit; }}
+  #bus_montpartre { left: 60px; top: 1670px; min-width: 240px; width: 240px; min-height: 160px; height: 160px; display: block; overflow: hidden; img { width: 240px; height: 190px; position: relative; left: 0px; top: -20px; max-width: inherit; }}
 }
