--- a/css/Guide_Pratique.css
+++ b/css/Guide_Pratique.css
@@ -17,7 +17,8 @@ body {
 .wb_sbg {
   background: transparent url("../gallery_gen/dad763187c3171ad64b3e88d1d511a44.jpg") repeat-x scroll center bottom; }
 
-body, .wb_sbg {
+body,
+.wb_sbg {
   min-width: 320px;
   min-height: 4442px; }
 
@@ -35,15 +36,12 @@ body, .wb_sbg {
   height: 30px;
   display: block;
   z-index: 220; }
-
-#menu ul {
-  background: #fcf3d2 none repeat scroll left top; }
-
-#menu .btn-collapser {
-  display: inline-block; }
-
-#menu > ul {
-  display: none; }
+  #menu ul {
+    background: #fcf3d2 none repeat scroll left top; }
+  #menu .btn-collapser {
+    display: inline-block; }
+  #menu > ul {
+    display: none; }
 
 #menu.collapse-expanded > ul {
   display: block;
@@ -62,7 +60,8 @@ body, .wb_sbg {
 #menu ul {
   border: 1px none #000000; }
 
-#menu, #menu ul {
+#menu,
+#menu ul {
   text-align: right; }
 
 #menu ul ul {
@@ -70,20 +69,20 @@ body, .wb_sbg {
 
 #menu li {
   margin: 10px 10px 10px 10px; }
+  #menu li a {
+    text-transform: uppercase;
+    border: 0px none #000000;
+    padding: 5px 10px 5px 10px;
+    font: normal normal 13px Georgia, serif;
+    text-decoration: none;
+    color: #8b4828;
+    line-height: 15px;
+    background: transparent none repeat scroll left top; }
 
-#menu li a {
-  text-transform: uppercase;
+#menu li:hover > a,
+#menu li:focus > a {
   border: 0px none #000000;
-  padding: 5px 10px 5px 10px;
-  font: normal normal 13px Georgia,serif;
-  text-decoration: none;
-  color: #8b4828;
-  line-height: 15px;
-  background: transparent none repeat scroll left top; }
-
-#menu li:hover > a, #menu li:focus > a {
-  border: 0px none #000000;
-  font: normal normal 13px Georgia,serif;
+  font: normal normal 13px Georgia, serif;
   text-decoration: none;
   color: #00c2a2;
   line-height: 15px;
@@ -91,7 +90,7 @@ body, .wb_sbg {
 
 #menu li.active > a {
   border: 0px none #000000;
-  font: normal normal 13px Georgia,serif;
+  font: normal normal 13px Georgia, serif;
   text-decoration: none;
   color: #00c292;
   line-height: 15px;
@@ -99,9 +98,7 @@ body, .wb_sbg {
 
 #div_logo_idf {
   border-radius: 0px 0px 0px 0px;
-  -webkit-border-radius: 0px 0px 0px 0px; }
-
-#div_logo_idf {
+  -webkit-border-radius: 0px 0px 0px 0px;
   left: 20px;
   top: 10px;
   min-width: 290px;
@@ -120,13 +117,12 @@ body, .wb_sbg {
   height: 30px;
   display: block;
   z-index: 206; }
-
-#div_facebook img {
-  width: 30px;
-  height: 30px;
-  position: static;
-  left: 0px;
-  top: 0px; }
+  #div_facebook img {
+    width: 30px;
+    height: 30px;
+    position: static;
+    left: 0px;
+    top: 0px; }
 
 #div_twitter {
   left: 200px;
@@ -137,13 +133,12 @@ body, .wb_sbg {
   height: 30px;
   display: block;
   z-index: 207; }
-
-#div_twitter img {
-  width: 30px;
-  height: 30px;
-  position: static;
-  left: 0px;
-  top: 0px; }
+  #div_twitter img {
+    width: 30px;
+    height: 30px;
+    position: static;
+    left: 0px;
+    top: 0px; }
 
 #div_footer_nosNoms {
   left: 10px;
@@ -164,13 +159,12 @@ body, .wb_sbg {
   height: 30px;
   display: block;
   z-index: 210; }
-
-#wb_element_instance71 img {
-  width: 30px;
-  height: 30px;
-  position: static;
-  left: 0px;
-  top: 0px; }
+  #wb_element_instance71 img {
+    width: 30px;
+    height: 30px;
+    position: static;
+    left: 0px;
+    top: 0px; }
 
 #div_img_metro {
   left: 10px;
@@ -181,13 +175,12 @@ body, .wb_sbg {
   height: 200px;
   display: block;
   z-index: 38; }
-
-#div_img_metro img {
-  width: 300px;
-  height: 200px;
-  position: static;
-  left: 0px;
-  top: 0px; }
+  #div_img_metro img {
+    width: 300px;
+    height: 200px;
+    position: static;
+    left: 0px;
+    top: 0px; }
 
 #div_titre_guidePratique {
   left: 20px;
@@ -238,13 +231,12 @@ body, .wb_sbg {
   height: 130px;
   display: block;
   z-index: 45; }
-
-#img_BusParis img {
-  width: 190px;
-  height: 130px;
-  position: static;
-  left: 0px;
-  top: 0px; }
+  #img_BusParis img {
+    width: 190px;
+    height: 130px;
+    position: static;
+    left: 0px;
+    top: 0px; }
 
 #paragraphe_Bus {
   left: 10px;
@@ -266,14 +258,13 @@ body, .wb_sbg {
   display: block;
   z-index: 47;
   overflow: hidden; }
-
-#div_imgTaxis img {
-  width: 390px;
-  height: 240px;
-  position: relative;
-  left: 0px;
-  top: 0px;
-  max-width: inherit; }
+  #div_imgTaxis img {
+    width: 390px;
+    height: 240px;
+    position: relative;
+    left: 0px;
+    top: 0px;
+    max-width: inherit; }
 
 #div_ParagrapheTaxi {
   left: 10px;
@@ -295,14 +286,13 @@ body, .wb_sbg {
   display: block;
   z-index: 49;
   overflow: hidden; }
-
-#div_img_VoitureJaune img {
-  width: 190px;
-  height: 210px;
-  position: relative;
-  left: 0px;
-  top: -10px;
-  max-width: inherit; }
+  #div_img_VoitureJaune img {
+    width: 190px;
+    height: 210px;
+    position: relative;
+    left: 0px;
+    top: -10px;
+    max-width: inherit; }
 
 #bus_Stif {
   left: 70px;
@@ -313,13 +303,12 @@ body, .wb_sbg {
   height: 130px;
   display: block;
   z-index: 50; }
-
-#bus_Stif img {
-  width: 190px;
-  height: 130px;
-  position: static;
-  left: 0px;
-  top: 0px; }
+  #bus_Stif img {
+    width: 190px;
+    height: 130px;
+    position: static;
+    left: 0px;
+    top: 0px; }
 
 #bus_Touriste {
   left: 70px;
@@ -331,14 +320,13 @@ body, .wb_sbg {
   display: block;
   z-index: 51;
   overflow: hidden; }
-
-#bus_Touriste img {
-  width: 210px;
-  height: 160px;
-  position: relative;
-  left: -20px;
-  top: -30px;
-  max-width: inherit; }
+  #bus_Touriste img {
+    width: 210px;
+    height: 160px;
+    position: relative;
+    left: -20px;
+    top: -30px;
+    max-width: inherit; }
 
 #bus_montpartre {
   left: 70px;
@@ -350,14 +338,13 @@ body, .wb_sbg {
   display: block;
   z-index: 52;
   overflow: hidden; }
-
-#bus_montpartre img {
-  width: 190px;
-  height: 150px;
-  position: relative;
-  left: 0px;
-  top: -20px;
-  max-width: inherit; }
+  #bus_montpartre img {
+    width: 190px;
+    height: 150px;
+    position: relative;
+    left: 0px;
+    top: -20px;
+    max-width: inherit; }
 
 #wb_element_instance85 {
   left: 0px;
@@ -375,7 +362,8 @@ body, .wb_sbg {
   #wb_footer {
     height: 80px; }
 
-  body, .wb_sbg {
+  body,
+  .wb_sbg {
     min-width: 768px;
     min-height: 2940px; }
 
@@ -392,9 +380,8 @@ body, .wb_sbg {
     min-height: 50px;
     height: 50px;
     display: block; }
-
-  #menu ul {
-    background: transparent none repeat scroll left top; }
+    #menu ul {
+      background: transparent none repeat scroll left top; }
 
   #menu .btn-collapser {
     display: none; }
@@ -419,13 +406,12 @@ body, .wb_sbg {
     min-height: 30px;
     height: 30px;
     display: block; }
-
-  #div_facebook img {
-    width: 30px;
-    height: 30px;
-    position: static;
-    left: 0px;
-    top: 0px; }
+    #div_facebook img {
+      width: 30px;
+      height: 30px;
+      position: static;
+      left: 0px;
+      top: 0px; }
 
   #div_twitter {
     left: 630px;
@@ -435,13 +421,12 @@ body, .wb_sbg {
     min-height: 30px;
     height: 30px;
     display: block; }
-
-  #div_twitter img {
-    width: 30px;
-    height: 30px;
-    position: static;
-    left: 0px;
-    top: 0px; }
+    #div_twitter img {
+      width: 30px;
+      height: 30px;
+      position: static;
+      left: 0px;
+      top: 0px; }
 
   #div_footer_nosNoms {
     left: 40px;
@@ -460,13 +445,12 @@ body, .wb_sbg {
     min-height: 30px;
     height: 30px;
     display: block; }
-
-  #wb_element_instance71 img {
-    width: 30px;
-    height: 30px;
-    position: static;
-    left: 0px;
-    top: 0px; }
+    #wb_element_instance71 img {
+      width: 30px;
+      height: 30px;
+      position: static;
+      left: 0px;
+      top: 0px; }
 
   #div_img_metro {
     left: 200px;
@@ -476,13 +460,12 @@ body, .wb_sbg {
     min-height: 260px;
     height: 260px;
     display: block; }
-
-  #div_img_metro img {
-    width: 380px;
-    height: 260px;
-    position: static;
-    left: 0px;
-    top: 0px; }
+    #div_img_metro img {
+      width: 380px;
+      height: 260px;
+      position: static;
+      left: 0px;
+      top: 0px; }
 
   #div_titre_guidePratique {
     left: 210px;
@@ -529,14 +512,13 @@ body, .wb_sbg {
     height: 160px;
     display: block;
     overflow: hidden; }
-
-  #img_BusParis img {
-    width: 240px;
-    height: 170px;
-    position: relative;
-    left: 0px;
-    top: 0px;
-    max-width: inherit; }
+    #img_BusParis img {
+      width: 240px;
+      height: 170px;
+      position: relative;
+      left: 0px;
+      top: 0px;
+      max-width: inherit; }
 
   #paragraphe_Bus {
     left: 350px;
@@ -556,14 +538,13 @@ body, .wb_sbg {
     height: 210px;
     display: block;
     overflow: hidden; }
-
-  #div_imgTaxis img {
-    width: 340px;
-    height: 210px;
-    position: relative;
-    left: 0px;
-    top: 0px;
-    max-width: inherit; }
+    #div_imgTaxis img {
+      width: 340px;
+      height: 210px;
+      position: relative;
+      left: 0px;
+      top: 0px;
+      max-width: inherit; }
 
   #div_ParagrapheTaxi {
     left: 360px;
@@ -583,14 +564,13 @@ body, .wb_sbg {
     height: 180px;
     display: block;
     overflow: hidden; }
-
-  #div_img_VoitureJaune img {
-    width: 240px;
-    height: 260px;
-    position: relative;
-    left: 0px;
-    top: -20px;
-    max-width: inherit; }
+    #div_img_VoitureJaune img {
+      width: 240px;
+      height: 260px;
+      position: relative;
+      left: 0px;
+      top: -20px;
+      max-width: inherit; }
 
   #bus_Stif {
     left: 60px;
@@ -600,13 +580,12 @@ body, .wb_sbg {
     min-height: 160px;
     height: 160px;
     display: block; }
-
-  #bus_Stif img {
-    width: 240px;
-    height: 160px;
-    position: static;
-    left: 0px;
-    top: 0px; }
+    #bus_Stif img {
+      width: 240px;
+      height: 160px;
+      position: static;
+      left: 0px;
+      top: 0px; }
 
   #bus_Touriste {
     left: 60px;
@@ -617,14 +596,13 @@ body, .wb_sbg {
     height: 160px;
     display: block;
     overflow: hidden; }
-
-  #bus_Touriste img {
-    width: 260px;
-    height: 200px;
-    position: relative;
-    left: -20px;
-    top: -40px;
-    max-width: inherit; }
+    #bus_Touriste img {
+      width: 260px;
+      height: 200px;
+      position: relative;
+      left: -20px;
+      top: -40px;
+      max-width: inherit; }
 
   #bus_montpartre {
     left: 60px;
@@ -635,14 +613,13 @@ body, .wb_sbg {
     height: 160px;
     display: block;
     overflow: hidden; }
-
-  #bus_montpartre img {
-    width: 240px;
-    height: 190px;
-    position: relative;
-    left: 0px;
-    top: -20px;
-    max-width: inherit; } }
+    #bus_montpartre img {
+      width: 240px;
+      height: 190px;
+      position: relative;
+      left: 0px;
+      top: -20px;
+      max-width: inherit; } }
 @media (min-width: 992px) {
   #wb_header {
     height: 250px; }
@@ -653,7 +630,8 @@ body, .wb_sbg {
   #wb_footer {
     height: 80px; }
 
-  body, .wb_sbg {
+  body,
+  .wb_sbg {
     min-width: 992px;
     min-height: 2530px; }
 
@@ -697,13 +675,12 @@ body, .wb_sbg {
     min-height: 32px;
     height: 32px;
     display: block; }
-
-  #div_facebook img {
-    width: 32px;
-    height: 32px;
-    position: static;
-    left: 0px;
-    top: 0px; }
+    #div_facebook img {
+      width: 32px;
+      height: 32px;
+      position: static;
+      left: 0px;
+      top: 0px; }
 
   #div_twitter {
     left: 850px;
@@ -713,13 +690,12 @@ body, .wb_sbg {
     min-height: 32px;
     height: 32px;
     display: block; }
-
-  #div_twitter img {
-    width: 32px;
-    height: 32px;
-    position: static;
-    left: 0px;
-    top: 0px; }
+    #div_twitter #div_twitter img {
+      width: 32px;
+      height: 32px;
+      position: static;
+      left: 0px;
+      top: 0px; }
 
   #div_footer_nosNoms {
     left: 50px;
@@ -738,13 +714,12 @@ body, .wb_sbg {
     min-height: 32px;
     height: 32px;
     display: block; }
-
-  #wb_element_instance71 img {
-    width: 32px;
-    height: 32px;
-    position: static;
-    left: 0px;
-    top: 0px; }
+    #wb_element_instance71 img {
+      width: 32px;
+      height: 32px;
+      position: static;
+      left: 0px;
+      top: 0px; }
 
   #div_img_metro {
     left: 30px;
@@ -754,13 +729,12 @@ body, .wb_sbg {
     min-height: 270px;
     height: 270px;
     display: block; }
-
-  #div_img_metro img {
-    width: 390px;
-    height: 270px;
-    position: static;
-    left: 0px;
-    top: 0px; }
+    #div_img_metro img {
+      width: 390px;
+      height: 270px;
+      position: static;
+      left: 0px;
+      top: 0px; }
 
   #div_titre_guidePratique {
     left: 0px;
@@ -807,14 +781,13 @@ body, .wb_sbg {
     height: 160px;
     display: block;
     overflow: hidden; }
-
-  #img_BusParis img {
-    width: 240px;
-    height: 170px;
-    position: relative;
-    left: 0px;
-    top: 0px;
-    max-width: inherit; }
+    #img_BusParis img {
+      width: 240px;
+      height: 170px;
+      position: relative;
+      left: 0px;
+      top: 0px;
+      max-width: inherit; }
 
   #paragraphe_Bus {
     left: 360px;
@@ -833,13 +806,12 @@ body, .wb_sbg {
     min-height: 270px;
     height: 270px;
     display: block; }
-
-  #div_imgTaxis img {
-    width: 430px;
-    height: 270px;
-    position: static;
-    left: 0px;
-    top: 0px; }
+    #div_imgTaxis img {
+      width: 430px;
+      height: 270px;
+      position: static;
+      left: 0px;
+      top: 0px; }
 
   #div_ParagrapheTaxi {
     left: 50px;
@@ -876,13 +848,12 @@ body, .wb_sbg {
     min-height: 160px;
     height: 160px;
     display: block; }
-
-  #bus_Stif img {
-    width: 240px;
-    height: 160px;
-    position: static;
-    left: 0px;
-    top: 0px; }
+    #bus_Stif img {
+      width: 240px;
+      height: 160px;
+      position: static;
+      left: 0px;
+      top: 0px; }
 
   #bus_Touriste {
     left: 60px;
@@ -893,14 +864,13 @@ body, .wb_sbg {
     height: 160px;
     display: block;
     overflow: hidden; }
-
-  #bus_Touriste img {
-    width: 260px;
-    height: 200px;
-    position: relative;
-    left: -20px;
-    top: -40px;
-    max-width: inherit; }
+    #bus_Touriste img {
+      width: 260px;
+      height: 200px;
+      position: relative;
+      left: -20px;
+      top: -40px;
+      max-width: inherit; }
 
   #bus_montpartre {
     left: 60px;
@@ -911,14 +881,13 @@ body, .wb_sbg {
     height: 160px;
     display: block;
     overflow: hidden; }
-
-  #bus_montpartre img {
-    width: 240px;
-    height: 190px;
-    position: relative;
-    left: 0px;
-    top: -20px;
-    max-width: inherit; } }
+    #bus_montpartre img {
+      width: 240px;
+      height: 190px;
+      position: relative;
+      left: 0px;
+      top: -20px;
+      max-width: inherit; } }
 @media (min-width: 1200px) {
   #wb_header {
     height: 250px; }
@@ -929,7 +898,8 @@ body, .wb_sbg {
   #wb_footer {
     height: 80px; }
 
-  body, .wb_sbg {
+  body,
+  .wb_sbg {
     min-width: 992px;
     min-height: 2530px; }
 
@@ -946,15 +916,12 @@ body, .wb_sbg {
     min-height: 40px;
     height: 40px;
     display: block; }
-
-  #menu ul {
-    background: transparent none repeat scroll left top; }
-
-  #menu .btn-collapser {
-    display: none; }
-
-  #menu > ul {
-    display: block; }
+    #menu ul {
+      background: transparent none repeat scroll left top; }
+    #menu .btn-collapser {
+      display: none; }
+    #menu > ul {
+      display: block; }
 
   #div_logo_idf {
     left: 27px;
