correction bug affichage mobile

--- a/css/Evenements.less
+++ b/css/Evenements.less
@@ -72,9 +72,7 @@ body,.wb_sbg {
         border: 1px none #000;
     }
 
-     ul {
-        text-align: right;
-    }
+     
 
      ul ul {
         background: @noirGris none repeat scroll left top;
@@ -122,7 +120,11 @@ body,.wb_sbg {
         background: transparent none no-repeat scroll center top;
     }
 }
-
+    
+    #div_menu,
+    #div_menu ul {
+        text-align: right;
+    }
     #div_menu.collapse-expanded > ul {
         display: block;
         float: none;
