--- a/css/A_Visiter.css
+++ b/css/A_Visiter.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/*couleur utilis├®e*/
+/*couleur utilisée*/
 #wb_header {
   background: transparent none repeat scroll left top;
   height: 250px; }
